# src/api/models/EmailDelivery.ts
@@ -6,11 +6,11 @@ import type { File } from './File';
 
 export type EmailDelivery = {
     readonly id: number;
+    failure_email_recipients?: string | null;
     readonly attachments: Array<File>;
     name: string;
     type?: 'email';
     success_callback_url?: string | null;
-    failure_email_recipients?: string | null;
     from_email: string;
     to_email: Array<string>;
     cc?: Array<string>;
