# src/api/models/WebhookDelivery.ts
@@ -4,10 +4,10 @@
 
 export type WebhookDelivery = {
     readonly id: number;
+    failure_email_recipients?: string | null;
     name: string;
     type?: 'webhook';
     success_callback_url?: string | null;
-    failure_email_recipients?: string | null;
     url: string;
     headers?: Record<string, any> | null;
     payload?: Record<string, any> | null;
